--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,11 +1,11 @@
 package:
   name: opencv3
-  version: 3.1.0
+  version: 3.2.0
 
 source:
-  fn: opencv-3.1.0.tar.gz
-  url: https://github.com/Itseez/opencv/archive/3.1.0.tar.gz
-  sha256: f00b3c4f42acda07d89031a2ebb5ebe390764a133502c03a511f67b78bbd4fbf
+  fn: opencv-3.2.0.tar.gz
+  url: https://github.com/Itseez/opencv/archive/3.2.0.tar.gz
+  sha256: b9d62dfffb8130d59d587627703d5f3e6252dce4a94c1955784998da7a39dd35
   
   patches:
     - cap_mpjpeg_decoder.patch  # [win]
@@ -13,19 +13,18 @@ source:
 
 requirements:
   build:
-   - python
+   - python 2.7*
    - cmake
-   - hdf5 1.8.*      # [osx]
+   - hdf5 1.8.*
    - numpy >=1.10
    - eigen 3.*
-   - tbb 4.3*        # [osx]
    - msinttypes r26  # [win and py<35]
 
   run:
-   - python
+   - python 2.7*
    - numpy >=1.10
    - hdf5 1.8.*  # [osx]
-   - tbb 4.3*    # [osx]
+   - libgcc
 
 test:
   imports:
